fix(style): Center checkbox in log column on mobile

--- a/frontend/src/components/MesoWorkouts/MesoWorkouts.module.css
+++ b/frontend/src/components/MesoWorkouts/MesoWorkouts.module.css
@@ -88,7 +88,10 @@ input[type="checkbox"] {
         min-width: 100vw;
     }
 
-    .sets_table input {
+    .sets_table input[type="number"] {
         width: 6rem;
+    }
+    .sets_table input[type="checkbox"] {
+        width: auto;
     }
 }
